--- a/themes/admin/templates/stats.html.twig
+++ b/themes/admin/templates/stats.html.twig
@@ -46,25 +46,25 @@
 	{% include 'partials/messages.html.twig' %}
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-4">
+			<div class="mb-5 col-4">
 				<h5>Page Views</h5>
 				<div style="width: w-100">
 					<canvas id="chart_hits"></canvas>
 				</div>
 			</div>
-			<div class="col-4">
+			<div class="mb-5 col-4">
 				<h5>Unique Visitors</h5>
 				<div style="width: w-100">
 					<canvas id="chart_ips"></canvas>
 				</div>
 			</div>
-			<div class="col-4">
+			<div class="mb-5 col-4">
 				<h5>Unique Users</h5>
 				<div style="width: w-100">
 					<canvas id="chart_users"></canvas>
 				</div>
 			</div>
-            <div class="col-8">
+            <div class="mb-5 col-8">
                 <h5>Top Users</h5>
 				<table class="table">
                     <tr>
