--- a/themes/admin/templates/stats.html.twig
+++ b/themes/admin/templates/stats.html.twig
@@ -3,145 +3,154 @@
 {% block messages %}{% endblock %}
 
 {% block stylesheets %}
-	{{ parent() }}
-	{% do assets.addCss('https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css') %}
+    {{ parent() }}
+    {% do assets.addCss('https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css') %}
 
-	<style>
-		a {
-			text-decoration: none !important
-		};
-	</style>
+    <style>
+        a {
+            text-decoration: none !important
+        };
+    </style>
 {% endblock %}
 
 {% block javascripts %}
-	{{ parent() }}
-	{% do assets.addJS('https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js') %}
+    {{ parent() }}
+    {% do assets.addJS('https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js') %}
 
 {% endblock %}
 
 {% block titlebar %}
 
-	<div class="button-bar">
-       
-		<div class="button-group">
+    <div class="button-bar">
+
+        <div class="button-group">
             <p>
-            Using: {{ stats.dbStats.path }} ({{ stats.dbStats.mb }} MB)
-        </p>
-			
-		
-		</div>
+                Using:
+                {{ stats.dbStats.path }}
+                ({{ stats.dbStats.mb }}
+                MB)
+            </p>
 
 
-	</div>
+        </div>
 
 
-	<h1>
-		<i class="fa fa-fw fa-line-chart"></i>
-		Page Stats</h1>
+    </div>
+
+
+    <h1>
+        <i class="fa fa-fw fa-line-chart"></i>
+        Page Stats</h1>
 
 {% endblock %}
 
 
 {% block content %}
-	{% include 'partials/messages.html.twig' %}
-	<div class="container-fluid">
-		<div class="row">
-			<div class="mb-5 col-4">
-				<h5>Page Views</h5>
-				<div style="width: w-100">
-					<canvas id="chart_hits"></canvas>
-				</div>
-			</div>
-			<div class="mb-5 col-4">
-				<h5>Unique Visitors</h5>
-				<div style="width: w-100">
-					<canvas id="chart_ips"></canvas>
-				</div>
-			</div>
-			<div class="mb-5 col-4">
-				<h5>Unique Users</h5>
-				<div style="width: w-100">
-					<canvas id="chart_users"></canvas>
-				</div>
-			</div>
-            <div class="mb-5 col-8">
-                <h5>Top Users</h5>
-				<table class="table">
-                    <tr>
-                        <th>User</th>
-                        <th>Page Views</th>
-                    </tr>
-                    {% for s in stats.topUsers %}
+    {% set conf = config.plugins['page-stats'] %}
+    {% include 'partials/messages.html.twig' %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="mb-5 col-4">
+                <h5>Page Views</h5>
+                <div style="width: w-100">
+                    <canvas id="chart_hits"></canvas>
+                </div>
+            </div>
+            <div class="mb-5 col-4">
+                <h5>Unique Visitors</h5>
+                <div style="width: w-100">
+                    <canvas id="chart_ips"></canvas>
+                </div>
+            </div>
+
+            {% if conf.show_unique_users_widget %}
+            <div class="mb-5 col-4">
+                <h5>Unique Users</h5>
+                <div style="width: w-100">
+                    <canvas id="chart_users"></canvas>
+                </div>
+            </div>
+            {% endif %}
+
+            {% if conf.show_top_users_widget %}
+                <div class="mb-5 col-8">
+                    <h5>Top Users</h5>
+                    <table class="table">
                         <tr>
-                            <td>{{ s.user }}</td>
-                            <td>{{ s.hits }}</td>
+                            <th>User</th>
+                            <th>Page Views</th>
+                        </tr>
+                        {% for s in stats.topUsers %}
+                            <tr>
+                                <td>{{ s.user }}</td>
+                                <td>{{ s.hits }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
+        </div>
+
+        <div class="row mt-5">
+            <div class="col">
+                <h5>Recently Viewed Pages</h5>
+                <table class="table">
+                    <tr>
+                        <th>Date</th>
+                        <th>Page</th>
+                        <th>user</th>
+                        <th>Location</th>
+                        {# <th>Views</th> #}
+                    </tr>
+                    {% for s in stats.recentPages %}
+                        <tr>
+                            <td>{{s.date|date}}</td>
+                            <td>
+                                <span title="{{s.route}}">{{s.page_title}}</span>
+                            </td>
+                            <td>{{s.user|default(s.ip)}}</td>
+                            <td>{{s.city}}
+                                -
+                                {{ s.country}}</td>
+                            {# <td>{{s.hits}}</td> #}
                         </tr>
                     {% endfor %}
                 </table>
             </div>
-		</div>
+        </div>
 
-		<div class="row mt-5">
-			<div class="col">
-				<h5>Recently Viewed Pages</h5>
-				<table class="table">
-					<tr>
-						<th>Date</th>
-						<th>Page</th>
-						<th>user</th>
-						<th>Location</th>
-						{# <th>Views</th> #}
-					</tr>
-					{% for s in stats.recentPages %}
-						<tr>
-							<td>{{s.date|date}}</td>
-							<td>
-								<span title="{{s.route}}">{{s.page_title}}</span>
-							</td>
-							<td>{{s.user|default(s.ip)}}</td>
-							<td>{{s.city}}
-								-
-								{{ s.country}}</td>
-							{# <td>{{s.hits}}</td> #}
-						</tr>
-					{% endfor %}
-				</table>
-			</div>
-		</div>
+        <div class="row mt-5">
+            <div class="col">
+                <h5>Most Viewed Pages</h5>
+                <table class="table">
+                    <tr>
+                        <th>Page</th>
+                        <th>Views</th>
+                        <th>Unique visitors</th>
+                        <th>Unique logged in Users</th>
+                    </tr>
 
-		<div class="row mt-5">
-			<div class="col">
-				<h5>Most Viewed Pages</h5>
-				<table class="table">
-					<tr>
-						<th>Page</th>
-						<th>Views</th>
-						<th>Unique visitors</th>
-						<th>Unique logged in Users</th>
-					</tr>
+                    {% for s in stats.pagesSummary %}
+                        <tr>
+                            <td>
+                                <span title="{{s.route}}">{{s.page_title}}</span>
+                            </td>
 
-					{% for s in stats.pagesSummary %}
-						<tr>
-							<td>
-								<span title="{{s.route}}">{{s.page_title}}</span>
-							</td>
+                            <td>{{s.hits}}</td>
+                            <td>{{s.visitors}}</td>
+                            <td>{{s.users}}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
 
-							<td>{{s.hits}}</td>
-							<td>{{s.visitors}}</td>
-							<td>{{s.users}}</td>
-						</tr>
-					{% endfor %}
-				</table>
-			</div>
-
-		</div>
-	</div>
+        </div>
+    </div>
 
 
 </div>
 
 {% set siteStats = stats.siteSummary%}
 <script>
-	
-{% include 'partials/charts.html.twig' %}
-</script>{% endblock %}
+
+    {% include 'partials/charts.html.twig' %}</script>{% endblock %}
