--- a/themes/admin/templates/partials/charts.html.twig
+++ b/themes/admin/templates/partials/charts.html.twig
@@ -1,35 +1,36 @@
-var ctx = document.getElementById("chart_hits").getContext("2d");
-var myChart = new Chart(ctx, {
-    type: "line",
-    options: {
-        plugins: {
-            legend: {
-            display: false
+{% if conf.show_page_views_widget %}
+    var ctx = document.getElementById("chart_hits").getContext("2d");
+    var myChart = new Chart(ctx, {
+        type: "line",
+        options: {
+            plugins: {
+                legend: {
+                display: false
+                }
+            },
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
             }
         },
-        scales: {
-            y: {
-                beginAtZero: true
-            }
+        data: {
+            datasets: [
+                {
+                    label: 'Page Views',
+                    data: [
+                        {% for s in siteStats.hits %}
+                            {
+                                            x: "{{ s.date }}",
+                                            y: {{ s.hits }}
+                            },
+                        {% endfor %}
+                    ]
+                }
+            ]
         }
-    },
-    data: {
-        datasets: [
-            {
-                label: 'Page Views',
-                data: [
-                    {% for s in siteStats.hits %}
-                        {
-                                        x: "{{ s.date }}",
-                                        y: {{ s.hits }}
-                        },
-                    {% endfor %}
-                ]
-            }
-        ]
-    }
-});
-
+    });
+{% endif %}
 
 {% if conf.show_unique_visitors_widget %}
     var ctx = document.getElementById("chart_ips").getContext("2d");
